user.rules
*filter
:ufw-user-input - [0:0]
:ufw-user-output - [0:0]
:ufw-user-forward - [0:0]
:ufw-before-logging-input - [0:0]
:ufw-before-logging-output - [0:0]
:ufw-before-logging-forward - [0:0]
:ufw-user-logging-input - [0:0]
:ufw-user-logging-output - [0:0]
:ufw-user-logging-forward - [0:0]
:ufw-after-logging-input - [0:0]
:ufw-after-logging-output - [0:0]
:ufw-after-logging-forward - [0:0]
:ufw-logging-deny - [0:0]
:ufw-logging-allow - [0:0]
:ufw-user-limit - [0:0]
:ufw-user-limit-accept - [0:0]
### RULES ###

### tuple ### deny any any 10.0.0.0/16 any 0.0.0.0/0 out
-A ufw-user-output -d 10.0.0.0/16 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 10.0.0.0/16 out
-A ufw-user-output -s 10.0.0.0/16 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 10.0.0.0/16 in
-A ufw-user-input -s 10.0.0.0/16 -j DROP

### tuple ### deny any any 10.0.0.0/16 any 0.0.0.0/0 in
-A ufw-user-input -d 10.0.0.0/16 -j DROP

### tuple ### deny any any 223.255.255.255 any 0.0.0.0/0 in
-A ufw-user-input -d 223.255.255.255 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 223.255.255.255 in
-A ufw-user-input -s 223.255.255.255 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 223.255.255.255 out
-A ufw-user-output -s 223.255.255.255 -j DROP

### tuple ### deny any any 223.255.255.255 any 0.0.0.0/0 out
-A ufw-user-output -d 223.255.255.255 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.0.1 in
-A ufw-user-input -s 127.0.0.1 -j DROP

### tuple ### deny any any 127.0.0.1 any 0.0.0.0/0 in
-A ufw-user-input -d 127.0.0.1 -j DROP

### tuple ### deny any any 0.0.0.0 any 0.0.0.0/0 in
-A ufw-user-input -d 0.0.0.0 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 8.0.0.0/16 in
-A ufw-user-input -s 8.0.0.0/16 -j DROP

### tuple ### deny any any 8.0.0.0/16 any 0.0.0.0/0 in
-A ufw-user-input -d 8.0.0.0/16 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 0.0.0.0 in
-A ufw-user-input -s 0.0.0.0 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 216.146.35.35 in
-A ufw-user-input -s 216.146.35.35 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 216.146.36.36 in
-A ufw-user-input -s 216.146.36.36 -j DROP

### tuple ### deny any any 216.146.36.36 any 0.0.0.0/0 in
-A ufw-user-input -d 216.146.36.36 -j DROP

### tuple ### deny any any 216.146.35.35 any 0.0.0.0/0 in
-A ufw-user-input -d 216.146.35.35 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.0.53 in
-A ufw-user-input -s 127.0.0.53 -j DROP

### tuple ### deny any any 127.0.0.53 any 0.0.0.0/0 in
-A ufw-user-input -d 127.0.0.53 -j DROP

### tuple ### deny any any 127.0.0.53 any 0.0.0.0/0 out
-A ufw-user-output -d 127.0.0.53 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.0.53 out
-A ufw-user-output -s 127.0.0.53 -j DROP

### tuple ### allow any any 0.0.0.0 any 0.0.0.0 in_lo
-A ufw-user-input -i lo -d 0.0.0.0 -s 0.0.0.0 -j ACCEPT

### tuple ### allow any any 0.0.0.0 any 0.0.0.0 out_lo
-A ufw-user-output -o lo -d 0.0.0.0 -s 0.0.0.0 -j ACCEPT

### tuple ### deny any any 0.0.0.0/0 any 127.0.0.0/8 in
-A ufw-user-input -s 127.0.0.0/8 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.1.1 out
-A ufw-user-output -s 127.0.1.1 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.1.1 in
-A ufw-user-input -s 127.0.1.1 -j DROP

### tuple ### deny any any 127.0.1.1 any 0.0.0.0/0 in
-A ufw-user-input -d 127.0.1.1 -j DROP

### tuple ### deny any any 127.0.1.1 any 0.0.0.0/0 out
-A ufw-user-output -d 127.0.1.1 -j DROP

### tuple ### limit udp 10000:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 10000:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp -m multiport --dports 10000:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp -m multiport --dports 10000:65535 -j ufw-user-limit-accept

### tuple ### limit tcp 10000:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 10000:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp -m multiport --dports 10000:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp -m multiport --dports 10000:65535 -j ufw-user-limit-accept

### tuple ### limit tcp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 443 -j ufw-user-limit-accept

### tuple ### limit udp 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 443 -j ufw-user-limit-accept

### tuple ### limit udp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 80 -j ufw-user-limit-accept

### tuple ### limit tcp 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 80 -j ufw-user-limit-accept

### tuple ### limit tcp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 53 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 53 -j ufw-user-limit-accept

### tuple ### limit udp 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 53 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 53 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 53 -j ufw-user-limit-accept

### tuple ### limit udp 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 67 -j ufw-user-limit-accept

### tuple ### limit tcp 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 67 -j ufw-user-limit-accept

### tuple ### limit tcp 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 68 -j ufw-user-limit-accept

### tuple ### limit tcp 69 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 69 -j ufw-user-limit-accept

### tuple ### limit udp 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 68 -j ufw-user-limit-accept

### tuple ### limit udp 69 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 69 -j ufw-user-limit-accept

### tuple ### limit udp 81 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 81 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 81 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 81 -j ufw-user-limit-accept

### tuple ### limit udp 135 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 135 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 135 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 135 -j ufw-user-limit-accept

### tuple ### limit udp 132 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 132 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 132 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 132 -j ufw-user-limit-accept

### tuple ### limit udp 133 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 133 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 133 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 133 -j ufw-user-limit-accept

### tuple ### limit udp 134 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 134 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 134 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 134 -j ufw-user-limit-accept

### tuple ### limit udp 130 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 130 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 130 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 130 -j ufw-user-limit-accept

### tuple ### limit udp 131 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 131 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 131 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 131 -j ufw-user-limit-accept

### tuple ### limit udp 136 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 136 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 136 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 136 -j ufw-user-limit-accept

### tuple ### limit udp 137 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 137 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 137 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 137 -j ufw-user-limit-accept

### tuple ### limit udp 138 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 138 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 138 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 138 -j ufw-user-limit-accept

### tuple ### limit udp 139 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 139 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 139 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 139 -j ufw-user-limit-accept

### tuple ### limit tcp 81 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 81 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 81 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 81 -j ufw-user-limit-accept

### tuple ### limit tcp 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 8080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 8080 -j ufw-user-limit-accept

### tuple ### limit udp 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp --dport 8080 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 8080 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 8080 -j ufw-user-limit-accept

### tuple ### deny any any 0.0.0.0/1 any 0.0.0.0/0 in
-A ufw-user-input -d 0.0.0.0/1 -j DROP

### tuple ### allow any any 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -j ACCEPT

### tuple ### deny any any 0.0.0.0/0 any 0.0.0.0/1 out
-A ufw-user-output -s 0.0.0.0/1 -j DROP

### tuple ### limit any 1 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 1 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 1 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 1 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 1 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 1 -j ufw-user-limit-accept

### tuple ### reject any 139 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 139 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 139 -j REJECT

### tuple ### reject any 138 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 138 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 138 -j REJECT

### tuple ### reject any 137 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 137 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 137 -j REJECT

### tuple ### reject any 136 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 136 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 136 -j REJECT

### tuple ### reject any 135 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 135 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 135 -j REJECT

### tuple ### reject any 134 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 134 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 134 -j REJECT

### tuple ### reject any 133 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 133 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 133 -j REJECT

### tuple ### reject any 132 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 132 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 132 -j REJECT

### tuple ### reject any 131 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 131 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 131 -j REJECT

### tuple ### reject any 130 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 130 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 130 -j REJECT

### tuple ### reject any 81 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 81 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 81 -j REJECT

### tuple ### reject any 8080 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8080 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 8080 -j REJECT

### tuple ### reject any 995 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 995 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 995 -j REJECT

### tuple ### reject any 1447 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1447 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1447 -j REJECT

### tuple ### reject any 440 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 440 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 440 -j REJECT

### tuple ### reject any 1194 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1194 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1194 -j REJECT

### tuple ### reject any 1197 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1197 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1197 -j REJECT

### tuple ### reject any 1497 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1497 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1497 -j REJECT

### tuple ### reject any 1762 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1762 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1762 -j REJECT

### tuple ### reject any 1312 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1312 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1312 -j REJECT

### tuple ### reject any 1195 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1195 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1195 -j REJECT

### tuple ### reject any 1763 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1763 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1763 -j REJECT

### tuple ### reject any 1569 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1569 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1569 -j REJECT

### tuple ### reject any 1951 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1951 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1951 -j REJECT

### tuple ### reject any 1324 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1324 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1324 -j REJECT

### tuple ### reject any 1624 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1624 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1624 -j REJECT

### tuple ### reject any 1801 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1801 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1801 -j REJECT

### tuple ### reject any 1353 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1353 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1353 -j REJECT

### tuple ### reject any 1646 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1646 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1646 -j REJECT

### tuple ### reject any 1305 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1305 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1305 -j REJECT

### tuple ### reject any 1861 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1861 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1861 -j REJECT

### tuple ### reject any 1966 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1966 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1966 -j REJECT

### tuple ### reject any 1452 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1452 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1452 -j REJECT

### tuple ### reject any 1213 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1213 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1213 -j REJECT

### tuple ### reject any 1404 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1404 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1404 -j REJECT

### tuple ### reject any 1306 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1306 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1306 -j REJECT

### tuple ### reject any 1414 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1414 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1414 -j REJECT

### tuple ### reject any 1916 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1916 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1916 -j REJECT

### tuple ### reject any 1588 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1588 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1588 -j REJECT

### tuple ### reject any 6152 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 6152 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 6152 -j REJECT

### tuple ### reject any 1772 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1772 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1772 -j REJECT

### tuple ### reject any 1693 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1693 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1693 -j REJECT

### tuple ### reject any 1712 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1712 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1712 -j REJECT

### tuple ### reject any 1358 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1358 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1358 -j REJECT

### tuple ### reject any 1703 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1703 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1703 -j REJECT

### tuple ### reject any 1933 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1933 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1933 -j REJECT

### tuple ### reject any 1062 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1062 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1062 -j REJECT

### tuple ### reject any 443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 443 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 443 -j REJECT

### tuple ### reject any 80 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 80 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 80 -j REJECT

### tuple ### reject any 1645 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1645 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1645 -j REJECT

### tuple ### reject any 1768 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1768 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1768 -j REJECT

### tuple ### reject any 1443 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1443 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1443 -j REJECT

### tuple ### reject any 1499 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1499 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1499 -j REJECT

### tuple ### reject any 1205 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 1205 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 1205 -j REJECT

### tuple ### reject any 22 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 22 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 22 -j REJECT

### tuple ### reject any 21 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 21 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 21 -j REJECT

### tuple ### reject any 23 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 23 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 23 -j REJECT

### tuple ### deny any any 224.0.0.0/3 any 0.0.0.0/0 out
-A ufw-user-output -d 224.0.0.0/3 -j DROP

### tuple ### limit any 69 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 69 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 69 -j ufw-user-limit-accept

### tuple ### limit any 67 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 67 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 67 -j ufw-user-limit-accept

### tuple ### limit any 67 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 67 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 67 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 67 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 67 -j ufw-user-limit-accept

### tuple ### limit any 80 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 80 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 80 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 80 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 80 -j ufw-user-limit-accept

### tuple ### limit any 443 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 443 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 443 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 443 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 443 -j ufw-user-limit-accept

### tuple ### limit any 69 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 69 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 69 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 69 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 69 -j ufw-user-limit-accept

### tuple ### limit any 68 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 68 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 68 -j ufw-user-limit-accept

### tuple ### limit any 66 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 66 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 66 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 66 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 66 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 66 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 66 -j ufw-user-limit-accept

### tuple ### limit any 65 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 65 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 65 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 65 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 65 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 65 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 65 -j ufw-user-limit-accept

### tuple ### limit any 64 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 64 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 64 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 64 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 64 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 64 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 64 -j ufw-user-limit-accept

### tuple ### limit any 63 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 63 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 63 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 63 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 63 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 63 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 63 -j ufw-user-limit-accept

### tuple ### limit any 62 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 62 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 62 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 62 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 62 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 62 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 62 -j ufw-user-limit-accept

### tuple ### limit any 61 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 61 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 61 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 61 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 61 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 61 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 61 -j ufw-user-limit-accept

### tuple ### limit any 60 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 60 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 60 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 60 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 60 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 60 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 60 -j ufw-user-limit-accept

### tuple ### limit any 70 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 70 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp --dport 70 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp --dport 70 -j ufw-user-limit-accept
-A ufw-user-output -p udp --dport 70 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp --dport 70 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp --dport 70 -j ufw-user-limit-accept

### tuple ### limit any 70 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 70 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 70 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 70 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 70 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 70 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 70 -j ufw-user-limit-accept

### tuple ### limit any 68 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 68 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 68 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 68 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 68 -j ufw-user-limit-accept

### tuple ### limit any 66 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 66 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 66 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 66 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 66 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 66 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 66 -j ufw-user-limit-accept

### tuple ### limit any 65 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 65 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 65 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 65 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 65 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 65 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 65 -j ufw-user-limit-accept

### tuple ### limit any 64 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 64 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 64 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 64 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 64 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 64 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 64 -j ufw-user-limit-accept

### tuple ### limit any 63 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 63 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 63 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 63 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 63 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 63 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 63 -j ufw-user-limit-accept

### tuple ### limit any 62 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 62 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 62 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 62 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 62 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 62 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 62 -j ufw-user-limit-accept

### tuple ### limit any 61 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 61 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 61 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 61 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 61 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 61 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 61 -j ufw-user-limit-accept

### tuple ### limit any 60 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 60 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp --dport 60 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp --dport 60 -j ufw-user-limit-accept
-A ufw-user-input -p udp --dport 60 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp --dport 60 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp --dport 60 -j ufw-user-limit-accept

### tuple ### reject any 140 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 140 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 140 -j REJECT

### tuple ### reject any 139 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 139 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 139 -j REJECT

### tuple ### reject any 138 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 138 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 138 -j REJECT

### tuple ### reject any 137 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 137 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 137 -j REJECT

### tuple ### reject any 136 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 136 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 136 -j REJECT

### tuple ### reject any 135 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 135 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 135 -j REJECT

### tuple ### reject any 134 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 134 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 134 -j REJECT

### tuple ### reject any 133 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 133 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 133 -j REJECT

### tuple ### reject any 132 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 132 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 132 -j REJECT

### tuple ### reject any 131 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 131 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 131 -j REJECT

### tuple ### reject any 130 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 130 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 130 -j REJECT

### tuple ### reject any 445 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 445 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 445 -j REJECT

### tuple ### reject any 445 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 445 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 445 -j REJECT

### tuple ### reject any 53 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 53 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 53 -j REJECT

### tuple ### reject any 20 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 20 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 20 -j REJECT

### tuple ### limit tcp 1:65535 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p tcp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p tcp -m multiport --dports 1:65535 -j ufw-user-limit-accept

### tuple ### limit udp 1:65535 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-output -p udp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-output -p udp -m multiport --dports 1:65535 -j ufw-user-limit-accept

### tuple ### limit udp 1:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p udp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p udp -m multiport --dports 1:65535 -j ufw-user-limit-accept

### tuple ### limit tcp 1:65535 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --set
-A ufw-user-input -p tcp -m multiport --dports 1:65535 -m conntrack --ctstate NEW -m recent --update --seconds 30 --hitcount 6 -j ufw-user-limit
-A ufw-user-input -p tcp -m multiport --dports 1:65535 -j ufw-user-limit-accept

### tuple ### reject any 10 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 10 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 10 -j REJECT

### tuple ### reject any 10 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 10 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 10 -j REJECT

### tuple ### reject any 11 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 11 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 11 -j REJECT

### tuple ### reject any 192 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 192 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 192 -j REJECT

### tuple ### reject any 192 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 192 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 192 -j REJECT

### tuple ### reject any 172 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 172 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 172 -j REJECT

### tuple ### reject any 172 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 172 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 172 -j REJECT

### tuple ### reject any 11 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 11 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 11 -j REJECT

### tuple ### reject tcp 12:20 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp -m multiport --dports 12:20 -j REJECT --reject-with tcp-reset

### tuple ### reject udp 12:20 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p udp -m multiport --dports 12:20 -j REJECT

### tuple ### reject udp 12:20 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p udp -m multiport --dports 12:20 -j REJECT

### tuple ### reject tcp 12:20 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp -m multiport --dports 12:20 -j REJECT --reject-with tcp-reset

### tuple ### reject any 100 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 100 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 100 -j REJECT

### tuple ### reject any 100 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 100 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 100 -j REJECT

### tuple ### reject any 176 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 176 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 176 -j REJECT

### tuple ### reject any 176 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 176 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 176 -j REJECT

### tuple ### reject any 212 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 212 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 212 -j REJECT

### tuple ### reject any 212 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 212 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 212 -j REJECT

### tuple ### reject any 169 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 169 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 169 -j REJECT

### tuple ### reject any 169 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 169 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 169 -j REJECT

### tuple ### deny any any 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -j DROP

### tuple ### deny any any 0.0.0.0/0 any 127.0.0.1 out
-A ufw-user-output -s 127.0.0.1 -j DROP

### tuple ### deny any any 127.0.0.1 any 0.0.0.0/0 out
-A ufw-user-output -d 127.0.0.1 -j DROP

### tuple ### deny any any 0.0.0.0/0 any 0.0.0.0 out
-A ufw-user-output -s 0.0.0.0 -j DROP

### tuple ### deny any any 0.0.0.0 any 0.0.0.0/0 out
-A ufw-user-output -d 0.0.0.0 -j DROP

### tuple ### reject any 1205 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1205 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1205 -j REJECT

### tuple ### reject any 1499 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1499 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1499 -j REJECT

### tuple ### reject any 1443 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1443 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1443 -j REJECT

### tuple ### reject any 1763 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1763 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1763 -j REJECT

### tuple ### reject any 1768 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1768 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1768 -j REJECT

### tuple ### reject any 1645 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1645 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1645 -j REJECT

### tuple ### reject any 1062 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1062 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1062 -j REJECT

### tuple ### reject any 1933 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1933 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1933 -j REJECT

### tuple ### reject any 1703 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1703 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1703 -j REJECT

### tuple ### reject any 1358 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1358 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1358 -j REJECT

### tuple ### reject any 1712 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1712 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1712 -j REJECT

### tuple ### reject any 1693 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1693 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1693 -j REJECT

### tuple ### reject any 1772 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1772 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1772 -j REJECT

### tuple ### reject any 6152 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 6152 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 6152 -j REJECT

### tuple ### reject any 1588 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1588 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1588 -j REJECT

### tuple ### reject any 1916 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1916 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1916 -j REJECT

### tuple ### reject any 1414 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1414 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1414 -j REJECT

### tuple ### reject any 1306 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1306 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1306 -j REJECT

### tuple ### reject any 1404 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1404 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1404 -j REJECT

### tuple ### reject any 1215 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1215 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1215 -j REJECT

### tuple ### reject any 1213 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1213 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1213 -j REJECT

### tuple ### reject any 1452 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1452 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1452 -j REJECT

### tuple ### reject any 1966 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1966 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1966 -j REJECT

### tuple ### reject any 1861 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1861 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1861 -j REJECT

### tuple ### reject any 1305 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1305 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1305 -j REJECT

### tuple ### reject any 1646 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1646 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1646 -j REJECT

### tuple ### reject any 1353 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1353 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1353 -j REJECT

### tuple ### reject any 1801 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1801 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1801 -j REJECT

### tuple ### reject any 1624 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1624 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1624 -j REJECT

### tuple ### reject any 1324 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1324 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1324 -j REJECT

### tuple ### reject any 1951 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1951 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1951 -j REJECT

### tuple ### reject any 1569 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1569 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1569 -j REJECT

### tuple ### reject any 1753 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1753 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1753 -j REJECT

### tuple ### reject any 1195 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1195 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1195 -j REJECT

### tuple ### reject any 1312 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1312 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1312 -j REJECT

### tuple ### reject any 1762 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1762 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1762 -j REJECT

### tuple ### reject any 1497 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1497 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1497 -j REJECT

### tuple ### reject any 1197 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1197 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1197 -j REJECT

### tuple ### reject any 1194 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1194 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1194 -j REJECT

### tuple ### reject any 440 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 440 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 440 -j REJECT

### tuple ### reject any 500 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 500 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 500 -j REJECT

### tuple ### reject any 1447 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 1447 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 1447 -j REJECT

### tuple ### reject any 8181 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 8181 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 8181 -j REJECT

### tuple ### reject any 8080 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 8080 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 8080 -j REJECT

### tuple ### reject any 8181 0.0.0.0/0 any 0.0.0.0/0 in
-A ufw-user-input -p tcp --dport 8181 -j REJECT --reject-with tcp-reset
-A ufw-user-input -p udp --dport 8181 -j REJECT

### tuple ### reject any 995 0.0.0.0/0 any 0.0.0.0/0 out
-A ufw-user-output -p tcp --dport 995 -j REJECT --reject-with tcp-reset
-A ufw-user-output -p udp --dport 995 -j REJECT

### END RULES ###

### LOGGING ###
-A ufw-after-logging-input -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-after-logging-output -j LOG --log-prefix "[UFW ALLOW] "
-A ufw-after-logging-forward -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-logging-deny -m conntrack --ctstate INVALID -j LOG --log-prefix "[UFW AUDIT INVALID] "
-A ufw-logging-deny -j LOG --log-prefix "[UFW BLOCK] "
-A ufw-logging-allow -j LOG --log-prefix "[UFW ALLOW] "
-I ufw-before-logging-input -j LOG --log-prefix "[UFW AUDIT] " -m limit --limit 3/min --limit-burst 10
-I ufw-before-logging-output -j LOG --log-prefix "[UFW AUDIT] " -m limit --limit 3/min --limit-burst 10
-I ufw-before-logging-forward -j LOG --log-prefix "[UFW AUDIT] " -m limit --limit 3/min --limit-burst 10
### END LOGGING ###

### RATE LIMITING ###
-A ufw-user-limit -m limit --limit 3/minute -j LOG --log-prefix "[UFW LIMIT BLOCK] "
-A ufw-user-limit -j REJECT
-A ufw-user-limit-accept -j ACCEPT
### END RATE LIMITING ###
COMMIT
